# predictris

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sh.exe.stackdump
docs/: abstract.md  algorithms.md  background_and_design_principles.md  demo.ipynb  experiments.md  icdl_paper.md  introduction.md  model.md  prediction_tree_example.excalidraw  report.bib  report.md  report.tex  sensorimotor_loop.excalidraw  tree_example.excalidraw
old/tetris_network/: Border.ctxt  Border.java  CompoundLayer.ctxt  CompoundLayer.java  JPanelDB.ctxt  JPanelDB.java  Layer.ctxt  Layer.java  Predictor.ctxt  Predictor.java  Tetris.ctxt  Tetris.java  TetrisApplet.ctxt  TetrisApplet.java  Tetromino.ctxt  Tetromino.java  View.ctxt  View.java  ViewSwing.ctxt  ViewSwing.java  package.bluej
plots/tetrominos=JS_context=1_episode=2_action=fromactive_activation=all/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
plots/tetrominos=JS_context=1_episode=2_action=fromactive_activation=byconfidence/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  (+2 more)
pseudocode/: agent  agent.md  prediction_tree.py
scripts/: classify.py  compress_script.py  distance_matrix.py  evaluate.py  get_error_rates.py  get_metrics.py  get_metrics_evolution.py  learn.py  nodes_count.py  obs_representation.py  optimize.py  plot_error_rates.py  plot_metrics.py  plot_nodes_count.py  plot_paths.py  plot_paths_distribution.py  render_trees.py  run_evaluation.py  run_smart_agent.py  run_tetris.py  smart_distance_matrix.py  smart_learn.py  test.py
src/: __init__.py  main.py
(+854 files in other folders)
