[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predictris"
version = "0.1.0"
description = "A brief description of your project"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "requests>=2.28.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/predictris"]
[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    "*.egg-info",
]

[tool.black]
line-length = 88
target-version = ['py38']
[tool.isort]
profile = "black"
line_length = 88
